# veilid

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py
proxy_cache/: cache.db  cache.db-shm  cache.db-wal
web_pages/: about.html  index.html
