[project]
name = "salome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "aiofiles>=24.1.0",
    "cryptography>=44.0.1",
    "diskcache>=5.6.3",
    "fastapi>=0.115.10",
    "uvicorn>=0.34.0",
    "veilid>=0.3.4",
]
